# sinus

./: CMakeLists.txt  README.md  main.cpp
